--- a/UIs/Resource.xaml
+++ b/UIs/Resource.xaml
@@ -1,6 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:MahApps="http://metro.mahapps.com/winfx/xaml/controls">
+                    xmlns:MahApps="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro">
     <Color x:Key="MahApps.Colors.ThemeForeground">#FF000000</Color>
     <SolidColorBrush x:Key="MahApps.Brushes.ThemeForeground" Color="{StaticResource MahApps.Colors.ThemeForeground}"/>
     <!-- Theme Brushes -->
@@ -180,9 +180,16 @@
         <GradientStop Color="{StaticResource C_GRAY_30}" Offset="0.6" />
         <GradientStop Color="{StaticResource C_GRAY_100}"  Offset="1.0" />
     </LinearGradientBrush>
-    <RadialGradientBrush x:Key="Radial_MainPage">
-        <GradientStop Color="{StaticResource majorgrad}"  Offset="0.0" />
-        <GradientStop Color="{StaticResource C_DARK_GRAY_50}"  Offset="1.0" />
+    <RadialGradientBrush x:Key="Radial_MainPage"
+                 GradientOrigin="0.5,0.5"
+                 Center="0.5,0.5"
+                 RadiusX="1"
+                 RadiusY="1">
+        <!-- Center color dynamically linked to the accent color -->
+        <GradientStop Color="{DynamicResource MahApps.Colors.Accent}" Offset="0.0" />
+
+        <!-- Outer color is a hard-coded dark gray -->
+        <GradientStop Color="#FF333333" Offset="1.0" />
     </RadialGradientBrush>
 
     <!--TextBlock style-->
@@ -208,17 +215,17 @@
         <Setter Property="FontWeight" Value="DemiBold" />
 
     </Style>
-    <Style x:Key="TB_ItemTitle" TargetType="TextBlock" BasedOn="{StaticResource TextBlock_Default}" >
+    <Style x:Key="TB_ItemTitle" TargetType="TextBlock" BasedOn="{StaticResource TB_Default}" >
         <Setter Property="FontWeight" Value="Medium" />
         <Setter Property="Height" Value="27"/>
     </Style>
-    <Style x:Key="TB_ItemLabel_Left" TargetType="TextBlock" BasedOn="{StaticResource TextBlock_Default}" >
+    <Style x:Key="TB_ItemLabel_Left" TargetType="TextBlock" BasedOn="{StaticResource TB_Default}" >
     </Style>
-    <Style x:Key="TB_ItemLabel_Right" TargetType="TextBlock" BasedOn="{StaticResource TextBlock_Default}" >
+    <Style x:Key="TB_ItemLabel_Right" TargetType="TextBlock" BasedOn="{StaticResource TB_Default}" >
         <Setter Property="Padding" Value="0,0,5,0"/>
         <Setter Property ="HorizontalAlignment"  Value="Right"/>
     </Style>
-    <Style x:Key="TB_ItemLabel_Center" TargetType="TextBlock" BasedOn="{StaticResource TextBlock_Default}" >
+    <Style x:Key="TB_ItemLabel_Center" TargetType="TextBlock" BasedOn="{StaticResource TB_Default}" >
         <Setter Property="Padding" Value="0,0,0,0"/>
         <Setter Property ="HorizontalAlignment"  Value="Center"/>
     </Style>
@@ -1401,15 +1408,15 @@
     </Style>
 
     <!--ListView style-->
-    <Style TargetType="{x:Type ListView}" BasedOn="{StaticResource MahApps.Styles.ListView}">
-        <Setter Property="BorderBrush" Value="{StaticResource BorderColor}"/>
+    <Style TargetType="{x:Type ListView}">
+        <Setter Property="BorderBrush" Value="{DynamicResource MahApps.Brushes.Accent}"/>
         <Setter Property="BorderThickness" Value="1"/>
         <Setter Property="SelectionMode" Value="Single"/>
     </Style>
 
     <!--Datagrid style-->
-    <Style TargetType="{x:Type DataGrid}" BasedOn="{StaticResource MahApps.Styles.DataGrid}">
-        <Setter Property="BorderBrush" Value="{StaticResource BorderColor}"/>
+    <Style TargetType="{x:Type DataGrid}">
+        <Setter Property="BorderBrush" Value="{DynamicResource MahApps.Brushes.Accent}"/>
         <Setter Property="BorderThickness" Value="1"/>
         <Setter Property="SelectionMode" Value="Single"/>
         <Setter Property="SelectionUnit" Value="FullRow"/>
