--- a/PatchViewer/Views/PatchList.xaml
+++ b/PatchViewer/Views/PatchList.xaml
@@ -24,13 +24,16 @@
             <Button Height="30" Width="30" Margin="10,0,0,0" Style="{StaticResource Button_FrameMenu}" ToolTip="Validate" Command="{Binding ValidateCommand}">
                 <Image Source="/UIs;component/Resource/Recipe_Reload.png" Style="{StaticResource ImgBtn_W25H25}"/>
             </Button>
+            <Button Height="30" Width="30" Margin="10,0,0,0" Style="{StaticResource Button_FrameMenu}" ToolTip="GetUnitCFGInfo" Command="{Binding GetUnitCFGInfoCommand}">
+                <Image Source="/UIs;component/Resource/Recipe_Reload.png" Style="{StaticResource ImgBtn_W25H25}"/>
+            </Button>
         </StackPanel>
         <DataGrid Background="LightGray" VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Visible" ItemsSource="{Binding Content}" CanUserDeleteRows="False"
-                                AutoGenerateColumns="False" CanUserAddRows="False" SelectionUnit="FullRow" EnableRowVirtualization="True" GridLinesVisibility="All" 
+                                AutoGenerateColumns="False" CanUserAddRows="False" SelectionUnit="FullRow" EnableRowVirtualization="True" GridLinesVisibility="All" SelectionMode="Single"
                                 ColumnHeaderHeight="30" RowHeight="25" SelectedItem="{Binding Selected}" Height="780">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Patch" Binding="{Binding PatchNameWithoutExtension}" IsReadOnly="True" Width="150" TextBlock.TextAlignment="Left" CanUserSort="True" CanUserResize="True" CanUserReorder="False" />
-                <DataGridCheckBoxColumn Header="NotEmpty" Binding="{Binding DestinationPatchNotEmpty}" IsReadOnly="True" Width="100" CanUserSort="True" CanUserResize="True" CanUserReorder="False"/>
+                <DataGridCheckBoxColumn Header="NotEmpty" Binding="{Binding DestinationPatchNotEmpty}" IsReadOnly="True" Width="85" CanUserSort="True" CanUserResize="True" CanUserReorder="False"/>
                 <DataGridTextColumn Header="Copy" Binding="{Binding CopyProgress, StringFormat=N2}" IsReadOnly="True" Width="60" TextBlock.TextAlignment="Left" CanUserSort="True" CanUserResize="True" CanUserReorder="False" />
                 <DataGridTextColumn Header="Extract" Binding="{Binding ExtractProgress, StringFormat=N2}" IsReadOnly="True" Width="60" TextBlock.TextAlignment="Left" CanUserSort="True" CanUserResize="True" CanUserReorder="False" />
                 <DataGridTextColumn Header="Val" Binding="{Binding ValidateProgress, StringFormat=N2}" IsReadOnly="True" Width="60" TextBlock.TextAlignment="Left" CanUserSort="True" CanUserResize="True" CanUserReorder="False" />
